fix whiteboard and chat overlap

--- a/public/style.css
+++ b/public/style.css
@@ -60,7 +60,8 @@ video{
     display : flex;
     justify-content: center;
     align-items: flex-start;
-    overflow-y: auto;
+    overflow: hidden;
+    position: relative;
 }
 
 .main_controls{
